# telegram-topic-sync

./: .env.example  .flake8  .gitignore  Makefile  README.md  migrate.py  pyproject.toml  requirements-dev.txt  requirements.txt  topic_mapping.example.json
.github/workflows/: ci.yml
app/: __init__.py  client.py  config.py  mapping.py  migrator.py  topics.py
scripts/: build_mapping.py  list_dialogs.py  list_topics.py
